Add budget details api endpoint and empty view
