# backend/Core/MyBudget.Application/Budgets/Model/BudgetDTO.cs
@@ -1,5 +1,13 @@
 ﻿namespace MyBudget.Application.Budgets.Model;
 
+public record BudgetListItemDTO(
+    Guid Id,
+    string Name,
+    string? Description,
+    DateTime CreationDate,
+    BudgetDTOStatus Status
+);
+
 public record BudgetDTO(
     Guid Id,
     string Name,
